# MBESQC

./: .gitignore  CLAUDE.md  README.md  mbesqc.spec  pyproject.toml  requirements.txt  run.bat  run_mbesqc_desktop.bat  run_mbesqc_web.bat  web_app.py
.claude/: launch.json  settings.local.json
desktop/: __init__.py  __main__.py  app_controller.py  i18n.py  main.py
docs/: DEVELOPMENT_ROADMAP.md  MBESQC_Data_Format_Guide.docx  PDS_FORMAT_SPECIFICATION.md  PDS_Format_Reverse_Engineering_Report.docx  PDS_바이트레벨_사양서.docx  PDS_역공학_교차검증_보고서.docx  PDS_포맷_역공학_보고서.docx  generate_pds_report.py  generate_pds_report_ko.py  pds_reverse_engineering_report.md
examples/: demo_read_all.py  run_qc.py  run_qc_full.py
gui/: app.py
mbes_qc/: __init__.py  coverage_qc.py  crossline_qc.py  dqr_ppt.py  export.py  file_qc.py  iho_s44.py  motion_qc.py  offset_qc.py  offset_validator.py  pdf_report.py  pds_qc.py  preprocess_validator.py  report.py  runner.py  snippet_parser.py  surface_builder.py  svp_qc.py  vessel_qc.py
pds_toolkit/: __init__.py  csv_reader.py  fau_reader.py  gpt_reader.py  gsf_reader.py  hvf_reader.py  models.py  pds_binary.py  pds_config_dict.py  pds_header.py  s7k_reader.py  swath.py  xtf_reader.py
templates/: base.html  dashboard.html  new_project.html  new_qc.html  project.html  qc_result.html
tests/: test_caris_batch_service.py  test_desktop_entrypoint.py  test_desktop_smoke.py  test_i18n.py  test_project_truth_boundaries.py  test_provenance_persistence.py  test_report_terminal.py  test_scoring_contract.py  test_track_selection_contract.py  verify_all.py  (+1 more)
(+25 files in other folders)
