[project]
name = "mbesqc"
version = "1.0.0"
description = "Multibeam Echosounder Data Quality Control"
license = "Proprietary"
authors = [
    { name = "Junhyub Kim", email = "junhyub.kim@geoviewdata.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyproj>=3.5",
    "matplotlib>=3.7",
    "PySide6>=6.5",
    "requests>=2.28",
    "openpyxl>=3.1",
    "python-docx>=0.8",
    "python-pptx>=0.6",
]

[project.optional-dependencies]
web = ["flask>=2.3"]

[project.scripts]
mbesqc = "desktop.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["desktop*", "mbes_qc*", "web_app*"]
